bug#5367 subqueries with "not in" and ndb

ndb/src/kernel/blocks/dbtc/DbtcMain.cpp:
  1) Fix handling of LQHKEYREF & IgnoreError & Index read
  2) Fix TCRELEASEREQ = ok if CS_ABORTING & AS_IDLE
  3) Give more info back in case of TCRELEASEREF
sql/ha_ndbcluster.cc:
  Rewrite index_read to give proper error codes back